--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -728,6 +728,7 @@ h2 {
 .block__4__content {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   @media (max-width: 680px) {
     flex-direction: column;
     align-items: center;
