--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -181,6 +181,8 @@ h2 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    align-items: center;
+    text-align: center;
   }
 }
 
@@ -292,7 +294,7 @@ h2 {
     height: 100%;
     overflow: auto;
     transition: all 0.3s ease 0s;
-    padding: 85px 10px 20px 10px;
+    padding: 90px 10px 20px 10px;
   }
   .header__menu.active {
     right: 0;
@@ -328,6 +330,9 @@ h2 {
 
     img {
       margin: 0px 10px 0px 0px;
+      @media (max-width: 991px) {
+        margin-right: 5px;
+      }
     }
     p {
       margin: 0px 0px 3px 0px;
@@ -1238,8 +1243,11 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px 0px;
+    padding: 30px 0px 20px 0px;
     text-align: center;
+  }
+  @media (max-width: 355px) {
+    padding-top: 18px;
   }
 }
 
@@ -1259,6 +1267,7 @@ footer {
   flex-direction: column;
   align-items: flex-end;
   white-space: nowrap;
+  text-align: end;
   a {
     color: #000000;
   }
@@ -1270,6 +1279,7 @@ footer {
   }
   @media (max-width: 600px) {
     align-items: center;
+    text-align: center;
   }
 }
 .leaflet-container.leaflet-touch-drag.leaflet-touch-drag {
