--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -453,6 +453,19 @@ h2 {
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  scrollbar-color: #fafafa00 #fafafa00; /* «цвет ползунка» «цвет полосы скроллбара» */
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    width: 1px; /* ширина для вертикального скролла */
+    height: 2px; /* высота для горизонтального скролла */
+    background-color: #ffffff00;
+  }
+
+  /* ползунок скроллбара */
+  &::-webkit-scrollbar-thumb {
+    background-color: #ffffff00;
+    border-radius: 9em;
+  }
 }
 
 /* Modal Content/Box */
